# backend/app/models/token_model.go
@@ -4,3 +4,8 @@ package models
 type Renew struct {
 	RefreshToken string `json:"refresh_token"`
 }
+
+type Token struct {
+	AccessToken  string `json:"access"`
+	RefreshToken string `json:"refresh"`
+}
